--- a/style.css
+++ b/style.css
@@ -68,5 +68,38 @@ a {
     background-image: url("img/backgrd.jpeg");
     width: 100%;
     height: 80vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 
+
+
+}
+
+.landing-page div{
+    /* background-color: #e3e6f3;
+    backdrop-filter: blur(30px); */
+    display:flex;
+    flex-direction: column;
+    position: absolute;
+    right: 50px;
+    padding: 2rem;
+    height: 400px;
+    width: 400px;
+    margin: 5rem;
+
+}
+
+.landing-page div h1{
+    color: blue;
+    font-size: 30px;
+}
+.landing-page div p{
+    color: black;
+}
+.landing-page div button{
+    color: white;
+    background-color: blue;
+    border-radius: 20px;
+    padding: 1rem 2rem;
 }
