--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
 /* Landing page */
 .landing-page{
     background-image: url("img/backgrd.jpeg");
+    background-size: cover;
     width: 100%;
     height: 80vh;
     display:flex;
@@ -77,9 +78,10 @@ a {
 }
 
 .landing-page div{
-    /* background-color: #e3e6f3;
-    backdrop-filter: blur(30px); */
+    background-color:rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
     display:flex;
+    border-radius: 6px;
     flex-direction: column;
     position: absolute;
     right: 50px;
