--- a/style.css
+++ b/style.css
@@ -102,8 +102,14 @@ a {
 .landing-page div button{
     margin: 5rem;
     color: white;
-    background-color: rgb(73, 73, 214);
+    background-color: rgb(39, 39, 172);
     border-radius: 20px;
     padding: 1rem 2rem;
-   
+    border: none;
 }
+
+.button:hover{
+    background-color:  rgb(82, 82, 207);
+
+}
+
