--- a/style.css
+++ b/style.css
@@ -126,7 +126,18 @@ h1{
 }
 h6{
     font-size: 20px;
+    color: #cce7d0;
 }
+
+/*box region*/
+.fe-main
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
 #feature{
     display: flex;
     flex-wrap: wrap;
@@ -136,17 +147,37 @@ h6{
 }
 
 #feature .fe-box{
-    width: 380px;
+    width: 350px;
     text-align: center;
     padding: 25px 15px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
     border: 1px solid #cce7d0;
     border-radius: 4px;
     background-color:  rgb(82, 82, 207);
-    
+    height: 250px;
+    margin-left: 45px;
     
 }
 
 #feature .fe-box:hover{
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
+}
+.fe-button{
+    background-color:rgb(82, 82, 207);
+    padding:1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3%;
+    margin-left: 40%;
+    border-radius: 20%;
+    border: none;
+}
+
+.fe-button a{
+    color: antiquewhite;
+}
+p{
+    color: #cce7d0;
+    font-weight: 400;
 }
