--- a/style.css
+++ b/style.css
@@ -121,9 +121,13 @@ a {
 }
 h1{
     font-size: 40px;
-   
     color: #222;
 }
+h2{
+    color: #222;
+    margin-left: 350px;
+}
+
 h6{
     font-size: 20px;
     color: #cce7d0;
@@ -144,6 +148,11 @@ h6{
     align-items: center;
     justify-content: space-between;
   
+}
+#feature .fe-text{
+    color: #222;
+    margin-left: 200px;
+    font-size: 20px;
 }
 
 #feature .fe-box{
@@ -179,5 +188,4 @@ h6{
 }
 p{
     color: #cce7d0;
-    font-weight: 400;
 }
