--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a {
     color: red;
 }
 .logo span{
-    color: blue;
+    color: green;
 }
 
 #navbar ul{
@@ -100,63 +100,68 @@ a {
 }
 
 .landing-page div h1{
-    margin-top: 1rem;
     color: blue;
     font-size: 30px;
 }
 .landing-page div p{
-    margin-top: 1rem;
     color: black;
-    line-height: 1.5rem;
 }
 .landing-page div button{
-    margin: 2rem;
+    margin: 5rem;
     color: white;
     background-color: rgb(39, 39, 172);
-    border-radius: 30px;
-    padding: 1rem 1.5rem;
+    border-radius: 20px;
+    padding: 1rem 2rem;
     border: none;
-    cursor: pointer;
 }
 
 .button:hover{
     background-color:  rgb(82, 82, 207);
 
 }
-h1{
-    font-size: 40px;
-    color: #222;
-}
-h2{
-    color: #222;
-    margin-left: 350px;
+
+.box{
+    padding: 10px;
+    margin-top: 3%;
 }
 
-h6{
+.box h1{
+    margin-left: 30%;
+    padding: 1;
+    margin-bottom: 1%; ;
+}
+
+
+.fe-text h1{
     font-size: 20px;
-    color: #cce7d0;
+    margin-bottom: 2%;
+    margin-left: 0;
+   
 }
 
-/*box region*/
-.fe-main
-{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
+.fe-main .fe-box h6{
+    font-size: 20px
+   
 }
+
 
 #feature{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-  
+    margin-left: 5%;
+    padding: 10px;
+    margin-top: 2%;
+  flex-direction: column;
 }
-#feature .fe-text{
-    color: #222;
-    margin-left: 200px;
-    font-size: 20px;
+
+.fe-main
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 #feature .fe-box{
@@ -166,18 +171,20 @@ h6{
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
     border: 1px solid #cce7d0;
     border-radius: 4px;
-    background-color:  rgb(82, 82, 207);
+    background-color:  rgb(55, 55, 134);
     height: 250px;
-    margin-left: 45px;
+    margin-right: 45px;
+    color: beige;
     
 }
 
 #feature .fe-box:hover{
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.06);
 }
+
 .fe-button{
-    background-color:rgb(82, 82, 207);
-    padding:1rem;
+    background-color:rgba(27, 27, 219, 0.774);
+    padding:1rem 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -187,9 +194,166 @@ h6{
     border: none;
 }
 
+.fe-button:hover{
+    background-color: rgb(55, 55, 134);
+    z-index: -1;
+    
+
+}
+
+
 .fe-button a{
     color: antiquewhite;
+
 }
-p{
-    color: #cce7d0;
+
+
+
+
+ 
+footer {
+	background-color: black;
+    background-image:  url("img/water3.jpg");
+
+  
+	display: flex;
+	padding: 1% 15% 1% 15%;
+	max-width: 100%;
+	height: 30vh;
+    margin: 2% 0 0 1%;
+    
+    
 }
+
+.footer-wrapper {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+    backdrop-filter: blur(20px);
+}
+.footer-icons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 33.3%;
+}
+.footer-media {
+	display: flex;
+	height: 80%;
+	margin: 0 3% 0 3%;
+}
+.social-icon-link {
+	height: 50px;
+	width: 50px;
+}
+.social-icon {
+	height: 100%;
+	width: 100%;
+}
+.content {
+	display: flex;
+	width: 100%;
+	height: 33.3%;
+	color: black;
+	align-items: center;
+	justify-content: center;
+    font-size: large;
+    font-weight: 900;
+}
+.copyright {
+	font-size: 1vw;
+}
+.bottom {
+	display: flex;
+	width: 100%;
+	height: 33.3%;
+	color: white;
+	align-items: center;
+	justify-content: center;
+}
+
+.bottom ul {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	font-size: 1vw;
+	color: black;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+}
+.footer-link {
+	width: 20%;
+	padding: 0;
+	margin: 0;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.footer-link a {
+	display: flex;
+	text-decoration: none;
+	color: black;
+    font-size: large;
+    font-weight: 900;
+}
+
+.title {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+
+.media-left{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 33.3%;
+}  
+
+#mail{
+    background-color: gray;
+    height: 40vh;
+    width: 80%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    margin-left: 10%;
+    margin-top: 1%;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#mail-content{
+    padding: 25px;
+    margin-top: 3%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+#submit{
+    display: flex;
+    flex-direction: row;
+}
+
+input[type=text] {
+
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+  }
+
+  #submit button{
+    padding: 2px 10px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    color: white;
+    background-color: #088178;
+  }
