--- a/style.css
+++ b/style.css
@@ -100,19 +100,23 @@ a {
 }
 
 .landing-page div h1{
+    margin-top: 1rem;
     color: blue;
     font-size: 30px;
 }
 .landing-page div p{
+    margin-top: 1rem;
     color: black;
+    line-height: 1.5rem;
 }
 .landing-page div button{
-    margin: 5rem;
+    margin: 2rem;
     color: white;
     background-color: rgb(39, 39, 172);
-    border-radius: 20px;
-    padding: 1rem 2rem;
+    border-radius: 30px;
+    padding: 1rem 1.5rem;
     border: none;
+    cursor: pointer;
 }
 
 .button:hover{
