--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 *{
@@ -100,19 +101,23 @@ a {
 }
 
 .landing-page div h1{
+    margin-top: 1rem;
     color: blue;
     font-size: 30px;
 }
 .landing-page div p{
+    margin-top: 1rem;
     color: black;
+    line-height: 1.5rem;
 }
 .landing-page div button{
-    margin: 5rem;
+    margin: 2rem;
     color: white;
     background-color: rgb(39, 39, 172);
-    border-radius: 20px;
-    padding: 1rem 2rem;
+    border-radius: 30px;
+    padding: 1rem 1.5rem;
     border: none;
+    cursor: pointer;
 }
 
 .button:hover{
@@ -165,13 +170,13 @@ a {
 }
 
 #feature .fe-box{
-    width: 350px;
+    width: 351px;
     text-align: center;
     padding: 25px 15px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
     border: 1px solid #cce7d0;
     border-radius: 4px;
-    background-color:  rgb(55, 55, 134);
+    background-color:  rgb(76, 76, 224);
     height: 250px;
     margin-right: 45px;
     color: beige;
