--- a/style.css
+++ b/style.css
@@ -128,6 +128,17 @@ a {
     background-color:  rgb(82, 82, 207);
 
 }
+.section-p{
+    background-color: rgb(245, 235, 235);
+    width: 100%;
+    margin-bottom: 2rem;
+}
+.section-p p, .section-p h1 {
+    padding: 1rem;
+    line-height: 2rem;
+    text-align: center;
+    
+}
 
 .box{
     padding: 10px;
@@ -141,11 +152,21 @@ a {
 }
 
 
-.fe-text h1{
+.fe-text h1, .fe-text{
     font-size: 20px;
     margin-bottom: 2%;
     margin-left: 0;
     text-align: center;
+   
+}
+
+.game-title{
+    color: white;
+    font-size: 20px;
+    margin-bottom: 2%;
+    margin-left: 0;
+    text-align: center;
+    padding-top: 1rem;
    
 }
 
@@ -232,8 +253,7 @@ footer {
 	padding: 1% 15% 1% 15%;
 	max-width: 100%;
 	height: 30vh;
-    margin: 2% 0 0 1%;
-    
+
     
 }
 
@@ -241,7 +261,7 @@ footer {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-    backdrop-filter: blur(20px);
+    /* backdrop-filter: blur(20px); */
 }
 .footer-icons {
 	display: flex;
@@ -252,7 +272,7 @@ footer {
 .footer-media {
 	display: flex;
 	height: 80%;
-	margin: 0 3% 0 3%;
+	
 }
 .social-icon-link {
 	height: 50px;
@@ -326,7 +346,7 @@ footer {
 }  
 
 #mail{
-    background-color: gray;
+    background-color: rgb(245, 235, 235);
     height: 40vh;
     width: 100%;
     display: flex;
